resolve issue of header being overlapped by home content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,7 @@ header {
     padding: 30px 20px;
     background-color: black;
     position: fixed;
+    z-index: 1;
     width: 100%;
     opacity: 0.75;
 }
